--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,7 +13,11 @@ const { src: momAndDaughterImageWebp } = await getImage({
 })
 ---
 
-<Layout title="Power Passenger Passage | Contact">
+<Layout
+  title="Power Passenger Passage | Contact"
+  description="We're here to guide you. Reach out here to start the conversation or schedule your free consultation!"
+  socialImage="/images/contact_og-image.png"
+>
   <header class="relative p-0">
     <div
       class="w-full md:h-dvh p-4 bg-cover bg-center bg-no-repeat after:content-[''] after:absolute after:bottom-0 after:left-0 after:w-full after:h-full after:bg-gradient-to-b after:from-whiteTransparent after:to-white"
