--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,6 +17,7 @@ import Layout from '../layouts/Layout.astro'
 <Layout
   title="Power Passenger Passage | About"
   description="I am a life coach and board certified OBGYN a Maternal-Fetal Medicine specialist. As a life coach I work with women on their journey through preconception, pregnancy and postpartum. I help women manage their minds around the uncertainty and unknown of a first pregnancy, and overcome fear and anxiety related to past pregnancy complications and other maternal high-risk conditions."
+  socialImage="/images/about_og-image.png"
 >
   <PageHeader
     title='About <span class="font-bold text-xl text-red-900">Emmie</span>'
