feat(app): add 'terms of use' doc to footer

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -60,9 +60,16 @@ import Subscribe from './Subscribe.astro'
     </div>
 
     <!-- Social icons -->
-    <div class="px-12 container-lg border-red-200">
-      <div class="py-12 border-t-[1px]">
-        <ul class="flex gap-8 md:justify-end">
+    <div class="container-lg px-12">
+      <div
+        class="container-lg flex items-center justify-between py-12 border-t-[1px] border-red-200"
+      >
+        <p>
+          <a class="site-link-2 text-red-200" href="/docs/terms-of-use.pdf" download>Terms of Use</a
+          >
+        </p>
+
+        <ul class="flex gap-8">
           <li>
             <a
               href="https://www.instagram.com/erslifecoach/"
