feat(app): update visible emails on website

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -32,17 +32,17 @@ import Subscribe from './Subscribe.astro'
         </ul>
       </div>
 
-      <div>
+      <div class="sm:col-span-2 md:col-auto">
         <h3 class="mb-4 text-white">Contact</h3>
         <ul class="flex flex-col gap-2">
-          <li class="text-red-200">
+          <li class="text-red-200 break-words">
             <a
-              href="mailto:emmie@erslifecoach.com"
+              href="mailto:emmie@powerpassengerpassage.com"
               target="_blank"
               rel="noopener noreferrer"
               title="Email"
               aria-label="Email"
-              class="site-link-2">emmie@erslifecoach.com</a
+              class="site-link-2">emmie@powerpassengerpassage.com</a
             >
           </li>
           <li class="text-red-200">
@@ -83,7 +83,7 @@ import Subscribe from './Subscribe.astro'
           </li>
           <li>
             <a
-              href="mailto:emmie@erslifecoach.com"
+              href="mailto:emmie@powerpassengerpassage.com"
               target="_blank"
               rel="noopener noreferrer"
               title="Email"
