--- a/src/components/ui/Navigation.astro
+++ b/src/components/ui/Navigation.astro
@@ -63,7 +63,7 @@ const currentPath = Astro.url.pathname
       </li>
       <li>
         <a
-          href="mailto:emmie@erslifecoach.com"
+          href="mailto:emmie@powerpassengerpassage.com"
           target="_blank"
           rel="noopener noreferrer"
           title="Email"
@@ -111,7 +111,7 @@ const currentPath = Astro.url.pathname
           <Icon name="tabler:brand-instagram" class="w-7" />
         </a>
         <a
-          href="mailto:emmie@erslifecoach.com"
+          href="mailto:emmie@powerpassengerpassage.com"
           target="_blank"
           rel="noopener noreferrer"
           title="Email"
