feat(app): add Umami analytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -95,7 +95,13 @@ const socialImageURL = new URL(socialImage || '/images/default_og-image.png', ca
     <meta name="apple-mobile-web-app-title" content="Power Passenger Passage" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <!-- TODO: add analytics -->
+    <!-- Umami Analytics -->
+    <script
+      type="text/partytown"
+      is:inline
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="3481a031-2b60-44fd-a4f1-348ea617d088"></script>
   </head>
 
   <body>
