perf(app): add backslashes to links to prevent redirect

--- a/src/components/text/CTA.astro
+++ b/src/components/text/CTA.astro
@@ -32,7 +32,7 @@ const { type, text, href, newWindow, class: className } = Astro.props
     </button>
   ) : (
     <a
-      href={`/blog/${href}`}
+      href={`/blog/${href}/`}
       class={`${className} cta block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-red-900 hover:text-white border hover:bg-red-900 rounded-lg shadow-sm transition`}
     >
       {text}
