--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -26,9 +26,9 @@ import Subscribe from './Subscribe.astro'
         <h3 class="mb-4 text-white">Sitemap</h3>
         <ul class="flex flex-col gap-2">
           <li class="text-red-200"><a href="/" class="site-link-2">Home</a></li>
-          <li class="text-red-200"><a href="/about" class="site-link-2">About</a></li>
-          <li class="text-red-200"><a href="/blog" class="site-link-2">Blog</a></li>
-          <li class="text-red-200"><a href="/contact" class="site-link-2">Contact</a></li>
+          <li class="text-red-200"><a href="/about/" class="site-link-2">About</a></li>
+          <li class="text-red-200"><a href="/blog/" class="site-link-2">Blog</a></li>
+          <li class="text-red-200"><a href="/contact/" class="site-link-2">Contact</a></li>
         </ul>
       </div>
 
