--- a/src/components/ui/RecentPosts.astro
+++ b/src/components/ui/RecentPosts.astro
@@ -22,5 +22,5 @@ const { title, posts } = Astro.props
   >
     {posts.map((post: SanityDocument) => <BlogCard post={post} />)}
   </div>
-  <CTA type="link" href="/blog" text="View All Posts" class="ml-auto mr-auto md:ml-auto md:mr-0" />
+  <CTA type="link" href="/blog/" text="View All Posts" class="ml-auto mr-auto md:ml-auto md:mr-0" />
 </div>
