--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -35,7 +35,7 @@ const { src: momAndDaughterImageWebp } = await getImage({
           consultation!
         </p>
         <div class="lsa lsa-slide-up delay-500 no-repeat">
-          <CTA class="mx-auto" type="link" href="/contact/#schedule" text="Book Now" />
+          <CTA class="mx-auto" type="link" href="/contact#schedule" text="Book Now" />
         </div>
       </div>
     </div>
