--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const recentPosts = posts.slice(0, 3)
         title="About Emmie Strassberg"
         text="I am a life coach, mother, double board certified OBGYN and Maternal-Fetal Medicine specialist. In my work as a high risk pregnancy doctor, I regularly see women struggle with anxiety and uncertainty that come up during pregnancy. Past pregnancies, medical conditions, family circumstances, work and current pregnancy concerns can all be overwhelming at times. If this is you, I can show you how to manage your thinking and create the pregnancy experience you desire."
       >
-        <CTA type="link" href="/about" text="Read More" />
+        <CTA type="link" href="/about/" text="Read More" />
       </ImageAndText>
     </section>
 
