--- a/src/components/ui/Navigation.astro
+++ b/src/components/ui/Navigation.astro
@@ -42,13 +42,13 @@ const currentPath = Astro.url.pathname
         <a href="/" title="Home" aria-label="Home">Home</a>
       </li>
       <li>
-        <a href="/about" title="About" aria-label="About">About</a>
+        <a href="/about/" title="About" aria-label="About">About</a>
       </li>
       <li>
-        <a href="/blog" title="Blog" aria-label="Blog">Blog</a>
+        <a href="/blog/" title="Blog" aria-label="Blog">Blog</a>
       </li>
       <li>
-        <a href="/contact" title="Contact" aria-label="Contact">Contact</a>
+        <a href="/contact/" title="Contact" aria-label="Contact">Contact</a>
       </li>
       <li>
         <a
@@ -83,18 +83,18 @@ const currentPath = Astro.url.pathname
         >
       </li>
       <li class="border-b-[1px] border-grey-100 py-6">
-        <a href="/about" title="About" aria-label="About" class="block hover:translate-x-2 text-md"
+        <a href="/about/" title="About" aria-label="About" class="block hover:translate-x-2 text-md"
           >About</a
         >
       </li>
       <li class="border-b-[1px] border-grey-100 py-6">
-        <a href="/blog" title="Blog" aria-label="Blog" class="block hover:translate-x-2 text-md"
+        <a href="/blog/" title="Blog" aria-label="Blog" class="block hover:translate-x-2 text-md"
           >Blog</a
         >
       </li>
       <li class="border-b-[1px] border-grey-100 py-6">
         <a
-          href="/contact"
+          href="/contact/"
           title="Contact"
           aria-label="Contact"
           class="block hover:translate-x-2 text-md">Contact</a
