--- a/src/components/ui/Subscribe.astro
+++ b/src/components/ui/Subscribe.astro
@@ -15,7 +15,7 @@ const { formId, class: className } = Astro.props
     <input
       type="email"
       name="Email"
-      id="email"
+      id=`${formId}-email`
       class="w-full h-full py-2 pl-4 text-sm placeholder:text-grey-200 focus:outline-none focus:ring-2 focus:ring-red-500 shadow-sm border rounded-lg transition"
       autocomplete="email"
       placeholder="Enter your email"
@@ -27,14 +27,14 @@ const { formId, class: className } = Astro.props
       class="absolute top-1/2 right-[6px] -translate-y-1/2 h-[calc(100%-12px)] flex items-center text-sm"
     />
   </div>
-  <p id="response" class="hidden text-left text-xs">
+  <p id={`${formId}-response`} class="hidden text-left text-xs">
     <!-- Form submission response handled via JS -->
   </p>
 </form>
 
 <script is:inline define:vars={{ formId }}>
   const form = document.querySelector(`#${formId}`)
-  const responseMessage = form.querySelector('#response')
+  const responseMessage = form.querySelector(`#${formId}-response`)
 
   /**
    * Handle UI messages based on submission state
