--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,6 +36,7 @@ const recentPosts = posts.slice(0, 3)
 
   <main>
     <section id="introduction">
+      <h2 class="sr-only">Introduction</h2>
       <ImageAndText
         image={emmieTwoImage}
         imageAlt="Emmie Strassberg"
