fix(app): handle ui when there are no blog posts

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -37,26 +37,34 @@ const remainingPosts = posts.slice(4)
   </PageHeader>
 
   <main class="bg-gradient-to-b from-white to-tan-100">
-    <section id="recent-blog-posts" class="container-lg">
-      <h2 class="mb-8 lsa lsa-slide-up no-repeat">Recent Blog Posts</h2>
+    {
+      posts.length === 0 ? ( 
+        <section class="container-lg text-center">
+          <h2 class="mb-8">No posts found</h2>
+          <p>Check back soon for new posts.</p>
+        </section>
+      ) : ( 
+        <section id="recent-blog-posts" class="container-lg">
+          <h2 class="mb-8 lsa lsa-slide-up no-repeat">Recent Blog Posts</h2>
 
-      <div class="grid lg:grid-cols-2 gap-12">
-        <BlogCard post={newestPost} />
+          <div class="grid lg:grid-cols-2 gap-12">
+            <BlogCard post={newestPost} />
 
-        <div class="flex flex-col gap-12">
-          {recentPosts.map((post) => <BlogCard post={post} isRow={true} />)}
-        </div>
-      </div>
-    </section>
+            <div class="flex flex-col gap-12">
+              {recentPosts.map((post) => <BlogCard post={post} isRow={true} />)}
+            </div>
+          </div>
+        </section>
+        <section id="all-blog-posts">
+          <div class="container-lg">
+            <h2 class="mb-8 lsa lsa-slide-up no-repeat">All Blog Posts</h2>
 
-    <section id="all-blog-posts">
-      <div class="container-lg">
-        <h2 class="mb-8 lsa lsa-slide-up no-repeat">All Blog Posts</h2>
-
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-12">
-          {remainingPosts.map((post) => <BlogCard post={post} />)}
-        </div>
-      </div>
-    </section>
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-12">
+              {remainingPosts.map((post) => <BlogCard post={post} />)}
+            </div>
+          </div>
+        </section>
+      )
+    }
   </main>
 </Layout>
