--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -60,7 +60,7 @@ import Layout from '../layouts/Layout.astro'
       </div>
     </section>
 
-    <section id="life-coaching" class="pl-0 pr-0 mb-sectionPadding">
+    <section id="life-coaching" class="pl-0 pr-0 mb-(--section-padding)">
       <div class="relative p-4 bg-red-100 max-h-[550px]">
         <Icon name="circle" class="absolute -top-20 -left-24 w-48" />
         <Icon name="circle" class="absolute -bottom-20 -right-24 w-48" />
@@ -111,7 +111,7 @@ import Layout from '../layouts/Layout.astro'
           </p>
         </ImageAndText>
 
-        <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-16 pt-sectionPadding pb-16">
+        <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-16 pt-(--section-padding) pb-16">
           <article class="flex flex-col items-center gap-6 lsa lsa-slide-up no-repeat">
             <BrandedIcon icon="star" />
             <h3>Power</h3>
