--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -24,7 +24,7 @@ const { src: momAndDaughterImageWebp } = await getImage({
       style={`background-image: url(${momAndDaughterImageWebp});`}
     >
       <div
-        class="container-sm relative z-10 pt-[calc(var(--nav-height)+4rem)] md:pt-navHeight h-full flex flex-col items-center md:justify-center gap-8 text-center"
+        class="container-sm relative z-10 pt-[calc(var(--nav-height)+4rem)] md:pt-(--nav-height) h-full flex flex-col items-center md:justify-center gap-8 text-center"
       >
         <Icon name="zig-zag" class="w-16 lsa no-repeat" />
         <h1 class="lsa lsa-slide-up no-repeat">
