feat(app): button radius, h1 line height

--- a/src/components/text/CTA.astro
+++ b/src/components/text/CTA.astro
@@ -14,7 +14,7 @@ const { type, text, href, newWindow, class: className } = Astro.props
   type === 'link' ? (
     <a
       href={href}
-      class={`${className} cta block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-white hover:text-white bg-red-900 hover:bg-red-800 rounded-lg shadow-sm transition`}
+      class={`${className} cta block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-white hover:text-white bg-red-900 hover:bg-red-800 rounded-full shadow-sm transition`}
       target={newWindow ? '_blank' : '_self'}
       rel={newWindow ? 'noopener noreferrer' : ''}
       title={text}
@@ -24,7 +24,7 @@ const { type, text, href, newWindow, class: className } = Astro.props
     </a>
   ) : type === 'button' ? (
     <button
-      class={`${className} cta block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-white hover:text-white bg-red-900 hover:bg-red-800 rounded-lg shadow-sm transition`}
+      class={`${className} cta block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-white hover:text-white bg-red-900 hover:bg-red-800 rounded-full shadow-sm transition`}
       title={text}
       aria-label={text}
     >
@@ -33,7 +33,7 @@ const { type, text, href, newWindow, class: className } = Astro.props
   ) : (
     <a
       href={`/blog/${href}/`}
-      class={`${className} cta block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-red-900 hover:text-white border hover:bg-red-900 rounded-lg shadow-sm transition`}
+      class={`${className} cta block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-red-900 hover:text-white border hover:bg-red-900 rounded-full shadow-sm transition`}
       title={text}
       aria-label={text}
     >
