--- a/src/components/ui/Subscribe.astro
+++ b/src/components/ui/Subscribe.astro
@@ -24,7 +24,7 @@ const { formId, class: className } = Astro.props
     <CTA
       type="button"
       text="Subscribe"
-      class="absolute top-1/2 right-[6px] -translate-y-1/2 h-[calc(100%-12px)] flex items-center text-sm"
+      class="absolute top-1/2 right-[6px] -translate-y-1/2 h-[calc(100%-12px)] flex items-center text-sm rounded-lg"
     />
   </div>
   <p id={`${formId}-response`} class="hidden text-left text-xs">
