--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -75,7 +75,7 @@ const socialImage = urlForImage(currentPost.mainImage).url()
       class="container-sm h-full pt-[calc(var(--nav-height)+4rem)] px-(--site-padding) flex flex-col items-center md:justify-center gap-8 text-center"
     >
       <Icon name="zig-zag" class="w-16 lsa no-repeat" />
-      <h1 class="lsa lsa-slide-up no-repeat" set:html={currentPost.title} />
+      <h1 class="leading-none lsa lsa-slide-up no-repeat" set:html={currentPost.title} />
       <DateAndReadTime
         publishedAt={currentPost.publishedAt}
         estimatedReadingTime={currentPost.estimatedReadingTime}
