--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -27,7 +27,7 @@ const { src: momAndDaughterImageWebp } = await getImage({
         class="container-sm relative z-10 pt-[calc(var(--nav-height)+4rem)] md:pt-(--nav-height) h-full flex flex-col items-center md:justify-center gap-8 text-center"
       >
         <Icon name="zig-zag" class="w-16 lsa no-repeat" />
-        <h1 class="lsa lsa-slide-up no-repeat">
+        <h1 class="leading-none lsa lsa-slide-up no-repeat">
           <span class="font-bold text-xl text-red-900">Contact</span> Power Passenger Passage
         </h1>
         <p class="max-w-2xl text-base lsa lsa-slide-up no-repeat delay-200">
