--- a/src/components/ui/PageHeader.astro
+++ b/src/components/ui/PageHeader.astro
@@ -25,7 +25,7 @@ const { title, subtitle, image, imageAlt } = Astro.props
       <div class="container-md pt-[calc(var(--nav-height)+4rem)] md:pt-(--nav-height) h-full flex flex-col md:flex-row justify-between gap-16 justify-items-center items-center">
         <div class="md:w-3/5 flex flex-col items-center md:items-start gap-8 text-center md:text-left">
           <Icon name="zig-zag" class="w-16 lsa no-repeat" />
-          <h1 class="lsa lsa-slide-up no-repeat" set:html={title} />
+          <h1 class="leading-none lsa lsa-slide-up no-repeat" set:html={title} />
           <p class="text-base lsa lsa-slide-up no-repeat delay-200" set:html={subtitle} />
           <div class="lsa lsa-slide-up no-repeat delay-500">
             <slot />
@@ -42,7 +42,7 @@ const { title, subtitle, image, imageAlt } = Astro.props
     ) : (
       <div class="container-sm pt-[calc(var(--nav-height)+4rem)] md:pt-(--nav-height) h-full flex flex-col items-center md:justify-center gap-8 text-center ">
         <Icon name="zig-zag" class="w-16 lsa no-repeat" />
-        <h1 class="lsa lsa-slide-up no-repeat" set:html={title} />
+        <h1 class="leading-none lsa lsa-slide-up no-repeat" set:html={title} />
         <p class="text-base lsa lsa-slide-up no-repeat delay-200" set:html={subtitle} />
         <div class="w-full lsa lsa-slide-up no-repeat delay-500">
           <slot />
