--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -318,6 +318,10 @@
     @apply w-6 stroke-1;
   }
 
+  .site-link {
+    @apply text-red-900 hover:text-red-500;
+  }
+
   .site-link-2 {
     @apply hover:text-white transition-all;
   }
