feat(app): update stripe link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -194,7 +194,7 @@ const recentPosts = posts.slice(0, 3)
           </h3>
           <CTA
             type="link"
-            href="https://buy.stripe.com/28o9BEf0Rbcu9NKfYY"
+            href="https://buy.stripe.com/28EcN5bZK1aV772gcw1oI01"
             text="Join Finding Peace in Pregnancy"
             class="mx-auto"
           />
