feat(app): ig link update, social icon footer placement

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -46,14 +46,31 @@ import Subscribe from './Subscribe.astro'
             >
           </li>
           <li class="text-red-200">
-            <a
-              href="https://www.instagram.com/erslifecoach/"
-              target="_blank"
-              rel="noopener noreferrer"
-              title="Instagram"
-              aria-label="Instagram"
-              class="site-link-2">Instagram</a
-            >
+            <ul class="flex gap-4">
+              <li>
+                <a
+                  href="https://www.instagram.com/dremmiestrassberg/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  title="Instagram"
+                  aria-label="Instagram"
+                  class="site-link-2"
+                >
+                  <Icon name="tabler:brand-instagram" class="site-icon text-red-200 site-link-2" />
+                </a>
+              </li>
+              <li>
+                <a
+                  href="mailto:emmie@powerpassengerpassage.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  title="Email"
+                  aria-label="Email"
+                >
+                  <Icon name="tabler:mail" class="site-icon text-red-200 site-link-2" />
+                </a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -73,31 +90,6 @@ import Subscribe from './Subscribe.astro'
             <Icon name="tabler:download" class="site-icon" />
           </a>
         </p>
-
-        <ul class="flex gap-8">
-          <li>
-            <a
-              href="https://www.instagram.com/erslifecoach/"
-              target="_blank"
-              rel="noopener noreferrer"
-              title="Instagram"
-              aria-label="Instagram"
-            >
-              <Icon name="tabler:brand-instagram" class="site-icon text-red-200 site-link-2" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="mailto:emmie@powerpassengerpassage.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              title="Email"
-              aria-label="Email"
-            >
-              <Icon name="tabler:mail" class="site-icon text-red-200 site-link-2" />
-            </a>
-          </li>
-        </ul>
       </div>
     </div>
   </div>
