--- a/src/components/ui/Navigation.astro
+++ b/src/components/ui/Navigation.astro
@@ -52,7 +52,7 @@ const currentPath = Astro.url.pathname
       </li>
       <li>
         <a
-          href="https://www.instagram.com/erslifecoach/"
+          href="https://www.instagram.com/dremmiestrassberg/"
           target="_blank"
           rel="noopener noreferrer"
           title="Instagram"
@@ -105,7 +105,7 @@ const currentPath = Astro.url.pathname
       </li>
       <li class="flex gap-8 border-b-[1px] border-grey-100 py-6">
         <a
-          href="https://www.instagram.com/erslifecoach/"
+          href="https://www.instagram.com/dremmiestrassberg/"
           target="_blank"
           rel="noopener noreferrer"
           title="Instagram"
