--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import '../styles/global.css'
 import Navigation from '../components/ui/Navigation.astro'
 import Footer from '../components/ui/Footer.astro'
-import PromotionalBanner from '../components/ui/PromotionalBanner.astro'
+import PromotionalDialog from '../components/ui/PromotionalDialog.astro'
 
 export interface Props {
   title: string
@@ -106,7 +106,7 @@ const socialImageURL = new URL(socialImage || '/images/default_og-image.png', ca
   </head>
 
   <body>
-    <PromotionalBanner />
+    <PromotionalDialog />
     <Navigation />
     <slot />
     <Footer />
